# OBD_reader

./: CMakeLists.txt  LICENSE  README.md  SerialPort.cpp  SerialPort.h  Translator.cpp  Translator.h  elm_sim.py  translator_tests.cpp  utils.cpp  utils.h
backend/: SerialPort.cpp  SerialPort.h  Translator.cpp  Translator.h  main.cpp  translator_tests.cpp  utils.cpp  utils.h
tools/: elm_sim.py
